--- a/addon/chrome/content/preferences.xhtml
+++ b/addon/chrome/content/preferences.xhtml
@@ -22,7 +22,7 @@
                    value="queue"/>
         </radiogroup>
     </html:div>
-    
+
     <html:div id="__addonRef__-general-tabs">
         <hbox>
             <html:input type="checkbox"
@@ -35,6 +35,8 @@
         </hbox>
     </html:div>
         
+    <!--// TODO: future add dropdown to select TTS engine
+             needs to call hook to gracefully transfer (cancel if playing/paused, etc)-->
     <!-- TTS Engine selection -->
     <html:div id="__addonRef__-general-engine">
         <label data-l10n-id="pref-general-engine-label"></label>
