fix: prevent undefined shown in Azure volume/rate on first open

--- a/addon/chrome/content/preferences.xhtml
+++ b/addon/chrome/content/preferences.xhtml
@@ -223,6 +223,7 @@
             </html:label>
             <html:input preference="__prefsPrefix__.azure.volume"
                         readonly="true"
+                        value="100"
                         style="width:30px"
             />
         </hbox>
@@ -244,6 +245,7 @@
             </html:label>
             <html:input preference="__prefsPrefix__.azure.rate"
                         readonly="true"
+                        value="100"
                         style="width:30px"
             />
         </hbox>
